# etalon

./: __init__.py  client.py  compare.py  data.py  example.py  metrics.py  pyproject.toml  server.py  signature.py
tests/: conftest.py  test_compare.py  test_data.py  test_metrics.py  test_server.py  test_signature.py
