[tool.poetry]
name = "mlops_monitoring"
version = "0.1.1"
description = "Tool to efficiently store and compare data distributions and characteristics"
authors = ["Michael Leshchinsky <michaelle2@clalit.org.il>"]

[[tool.poetry.source]]
name = "cri"
url = "http://10.51.41.122:7002"
default = true

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
whylogs = "^0.4.6"
fastapi = "^0.63.0"
pyodbc = "^4.0.30"
python-dotenv = "^0.17.0"
pathos = "^0.2.7"
pyyaml = "5.3.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.4b1"
mypy = "^0.812"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

